lib/than_pkg_linux_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int Function()>()
external int than_pkg_linux_plugin_get_type();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Int>)>()
external void than_pkg_linux_plugin_register_with_registrar(
  ffi.Pointer<ffi.Int> registrar,
);

/// --- Texture FFI Functions များ ---
/// ၁။ Texture အသစ်ဆောက်ပြီး Texture ID (int64_t) ပြန်ပေးမယ့် function
@ffi.Native<ffi.Int Function()>()
external int than_pkg_linux_plugin_ffi_create_texture();

/// Texture ကို အပြီးဖျက်မယ့် function ကြေညာခြင်း
@ffi.Native<ffi.Void Function(ffi.Int)>()
external void than_pkg_linux_plugin_ffi_dispose_texture(int texture_id);

/// ၂။ ရလာတဲ့ ID ထဲကို Pixel bufferPointer သွားချိတ်မယ့် function
@ffi.Native<
  ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Int>, ffi.Int, ffi.Int)
>()
external void than_pkg_linux_plugin_ffi_update_texture_pixels(
  int texture_id,
  ffi.Pointer<ffi.Int> buffer,
  int width,
  int height,
);

final class _ThanPkgLinuxPlugin extends ffi.Opaque {}

typedef ThanPkgLinuxPlugin = ffi.Int;
typedef DartThanPkgLinuxPlugin = int;

final class UnnamedStruct extends ffi.Struct {
  @ffi.Int()
  external int parent_class;
}

typedef ThanPkgLinuxPluginClass = UnnamedStruct;
